--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 :root {
+  background-color: #1a1a1a;
+  color: white;
+}
+
+input {
+  color: #1a1a1a;
+}
+
+/* 
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -69,4 +79,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
