--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@ input {
 }
 
 #filter {
-  @apply grid sm:flex gap-3 mt-2 mb-4 sm:mx-10 md:mx-14 lg:mx-20;
+  @apply grid sm:flex gap-3 mt-2 mb-4 sm:mx-6 md:mx-8 lg:mx-20 xl:mx-48;
   button {
     @apply bg-blue-500 text-white p-2 rounded hover:bg-blue-700 sm:w-1/4;
   }
