--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,13 +14,15 @@ input {
 #filter {
   @apply grid sm:flex gap-3 mt-2 mb-4 sm:mx-6 md:mx-8 lg:mx-20 xl:mx-48;
   button {
-    @apply bg-blue-500 text-white p-2 rounded hover:bg-blue-700 sm:w-1/4;
+    @apply bg-blue-700 text-white p-2 rounded hover:bg-blue-800 sm:w-1/4;
+  }
+  .active-tab {
+    @apply bg-blue-600 font-bold;
   }
 }
 
 form {
   @apply bg-opacity-15 bg-white p-4 rounded-lg shadow-md;
-
   label {
     display: block;
   }
@@ -34,6 +36,6 @@ form {
   }
 
   button {
-    @apply bg-blue-500 text-white p-2 rounded hover:bg-blue-700 w-2/4;
+    @apply bg-blue-700 text-white p-2 rounded hover:bg-blue-800 w-2/4;
   }
 }
